k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-app-ingress
  namespace: micro-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: micro-app.example.com  # Замените на свой домен
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hotels-api
            port:
              number: 8080
